# hybrid-trading-bot

./: .gitignore  Makefile  clob_discovery.py  extract_bitcoin_token.py  find_gamma_tokens.py  find_token.py  gamma_discovery.py  get_token.py  requirements.txt  verify_phase3.sh
artifacts/: last_patch.diff  polymarket_live_shadow_20260111_121850.csv
config/: config.toml  ws_sources.toml
dashboard/: app.py  home.py
docs/: venuebook.md
eligibility/: kalshi_rules.py
engine/: Cargo.toml
engine-rust/: Cargo.toml
engine-rust/src/: config.rs  db.rs  execution.rs  ingest.rs  lib.rs  main.rs  persist.rs  strategy.rs  types.rs
engine-rust/src/ingest/: mod.rs  realws.rs  venuebook.rs  ws_sources.rs
engine-rust/tests/: fixture_io.rs  pragma_verification.rs  property_tests.rs  test_venuebook_normalization.rs
engine-rust/tests/fixtures/: crossover_scenario.jsonl
engine-rust/tests/fixtures/venuebook/kalshi/: k_one_sided.json  k_wide.json
engine-rust/tests/fixtures/venuebook/malformed/: ambiguous_price.json  k_bad_shape.json  pm_bad_shape.json
engine-rust/tests/fixtures/venuebook/polymarket/: pm_empty.json  pm_thin.json
engine/src/: main.rs
feeds/: binance_spot.py  coinbase_spot.py  gemini_spot.py  router.py
polymarket/: clob_readiness.py  contract.py
recorder/: __init__.py  journal_schema.py  shadow_artifacts.py  trade_journal.py
risk/: __init__.py  eligibility.py  rules.py
scripts/: capture_ws_frames.py  diagnose_cpu_pressure.sh  healthcheck.sh  port_guard_8501.sh  preflight_phase2.sh  proof_check.sh  proof_fr_strict.sh  proof_stall_detection.sh  (+18 more)
(+239 files in other folders)
