[package]
name = "engine-rust"
version = "0.1.0"
edition = "2021"
description = "Phase 2 Rust Pipeline Skeleton - Shadow Mode Trading Engine"
authors = ["hybrid-trading-bot"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "signal"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
proptest = "1"
tokio-test = "0.4"
tempfile = "3"

[[bin]]
name = "engine-rust"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
